--- a/Makefile.for.proja
+++ b/Makefile.for.proja
@@ -3,11 +3,11 @@ make: proja
 proja: proja.o sample_tunnel.o
 	g++ -o proja proja.o sample_tunnel.o -g
 
-proja.o: proja.cpp sample_tunnel.h
+proja.o: proja.cpp proja.h sample_tunnel.h
 	g++ -g -c -Wall proja.cpp
 	
 sample_tunnel.o: sample_tunnel.h sample_tunnel.c
 	g++ -g -c -Wall sample_tunnel.c
 
 clean:
-	rm -f *.o proja *.out
+	rm -f *.o projb proja *.out
